# learnpytorch

./: .gitignore  main.py  pyproject.toml  pyproject1.toml  pyproject2.toml  pyproject_gpu.toml  pyrightconfig.json
_00/: __init__.py  exercise.py
_01/: __init__.py  exercise.py  lecture.py
_02/: __init__.py  exercise.py  lecture.py  model1.py  practice.py  practice2.py
_03/: __init__.py  lecture.py  model1.py
_04/: __init__.py  dataloader.py  exercise.py  tinyvgg.py  train.py
_05/: __init__.py  dataloaders.py  engine.py  get_data.py  train.py
_06/: model.py  train.py
_helpers/: helpers.py
models/: 01_linear_regressor_exercise.pth  01_linear_regressor_lecture.pth
